# Uniwersytet

./: README.md
I semestr/Python/: array_demo.py
I semestr/Python/Lista10/: czerwony.txt  kwadrat.py  niebieski.txt  zadanie1.py  zadanie2.py  zadanie3a.py  zadanie3b.py  zadanie4.py
I semestr/Python/Lista11/: L11Z5.py  komiwojazer.py  punkty.txt  szyfry  test  zadanie1.py  zadanie2.py  zadanie4.py  zadanie5 (copy).py
I semestr/Python/Lista12/: lalka.txt  zadanie2.py  zadanie3.py  zadanie5.py
I semestr/Python/Lista13/: L11Z5 (1).py  L11Z5.py  szyfry
I semestr/Python/Lista14/: miejscowosci.txt  plik.txt  zadanie1.py  zadanie2.py
II semestr/MP/: 06.03.18.rkt  Pracownia2.bak  Pracownia2.rkt  Pracownia5.bak  Pracownia5.rkt  golovko-marko.rkt  lista2.bak  lista2.rkt
IV semestr/SketchUp/: L1Z3.skp  L2Z1.skp  Lego.skp
VI semestr/Bazy danych/: pga-marko-golovko.sql
VII semestr/IO/: 1-2.docx  FAZAKONSTRUKCJI.tex  FAZAWPROWADZENIE.tex  IO-kolowium nr 2-MarkoGolovko21-01-2021.docx  Koncepcjawykonaniasystemu.tex  Specyfikacjawymagań.tex  tablicaKoncepcyjna_2.odp
VII semestr/Rust/FinalProject/: Cargo.toml
VII semestr/Rust/FinalProject/src/: acc_struct.rs  db_api.rs  io_wrappers.rs  main.rs  menu.rs
VII semestr/Rust/FinalProject/src/menu/: edit_acc.rs  new_acc.rs  remove_acc.rs  see_acc.rs  transact.rs  view_accs.rs
VII semestr/SO/: SO Lista 2 (1,2,3,4,5).md  SO Lista 3(1,2,3,4,5,6,7).md  SO Lista 4(1,3,4,5,6,7).md  SO Lista 5 (1,5,6,8,9,7).md  SO Lista 6 (1,2,3,4,5,7).md  SO Lista 7(1,2,3).md  SO Lista 8(1,2,3).md
VIII semetr/TG/: AutomatyzacjaTestowania.pptx
(+1015 files in other folders)
