[package]
name = "bank_manager"
version = "0.1.0"
authors = ["i297354 <markgolovko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
termion = "1.5.5"
chrono = "0.4"
rusqlite = "0.24.2"
